# G_SoftRender

./: CMakeLists.txt  README.md  basicdatastructure.hpp  blinnphongshader.cpp  blinnphongshader.h  framebuffer.cpp  framebuffer.h  main.cpp  mesh.cpp  mesh.h  model.cpp  model.h  rendermath.hpp  shader.cpp  shader.h  shader.hpp  softrender.cpp  softrender.h  softrender.ui  softrendercore.cpp  softrendercore.h  softrenderwidget.cpp  softrenderwidget.h  softrenderwidget.ui  texture.cpp  texture.h
doc/概要设计/: G_SoftRender概要设计.docx  需知说明.docx
